cilium/csm/resources/details-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: details-ingress
  namespace: default
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - backend:
              service:
                name: details
                port:
                  number: 9080
            path: /details
            pathType: Prefix
