cilium/csm/resources/reviews-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviews-ingress
  namespace: default
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - backend:
              service:
                name: reviews
                port:
                  number: 9080
            path: /reviews
            pathType: Prefix
